--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
-  margin: 0;
+  margin: 1;
 }
 
 body {
@@ -13,7 +13,7 @@ body#login {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 100dvh;
+  height: 120dvh;
 }
 
 input {
@@ -21,18 +21,18 @@ input {
 }
 
 .container {
-  max-width: 60rem;
-  height: 30rem;
-  display: grid;
+  max-width: 20rem;
+  height: 50rem;
+  display: ;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  margin: 2rem auto;
-  border-radius: .5rem;
+  margin: 1rem auto;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 
 .container>* {
-  padding: 1rem;
+  padding: 8rem;
 }
 
 .logo-wrapper {
@@ -44,7 +44,7 @@ input {
 }
 
 .form-wrapper {
-  background-color: #FFF;
+  background-color: #ffffff5d;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,4 +54,30 @@ input {
 
 .form-wrapper h2 {
   text-align: center;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0rem;
+  color: white;
+}
+
+.loginBtn {
+  background-color: #007bff60;
+  color: white;
+  border: none;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  cursor: pointer;
+  
+}
+
+.light-theme {
+  background-color: white;
+  color: black;
+}
+.dark-theme {
+  background-color: black;
+  color: white;
 }
