--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body#login {
-  background-image: url(assets/bg.webp);
+  background-image: url(bg.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -36,7 +36,7 @@ input {
 }
 
 .logo-wrapper {
-  background-image: url(assets/logo.jpg);
+  background-image: url(logo.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -70,7 +70,6 @@ input {
   border-radius: 0.25rem;
   padding: 0.5rem;
   cursor: pointer;
-  
 }
 
 .light-theme {
